# Cinder-Pango

./: .clang-format  .gitignore  cinderblock.xml  license.txt  readme.md
docs/homebrew/: harfbuzz.rb  pango.rb
include/freetype2/config/: ftconfig.h
include/glib-2.0/: glibconfig-osx.h  glibconfig-win64.h  glibconfig.h
include/harfbuzz/: hb-version.h
lib/msw/Win32/: cairo.lib  fontconfig.lib  glib-2.0.lib  gmodule-2.0.lib  gobject-2.0.lib  gthread-2.0.lib  pango-1.0.lib  pangocairo-1.0.lib  pangoft2-1.0.lib  pangowin32-1.0.lib  readme.md
lib/msw/x64/: cairo.lib  fontconfig.lib  glib-2.0.lib  gmodule-2.0.lib  gobject-2.0.lib  gthread-2.0.lib  pango-1.0.lib  pangocairo-1.0.lib  pangoft2-1.0.lib  pangowin32-1.0.lib
samples/PangoBasic/linux/: CMakeLists.txt
samples/PangoBasic/src/: PangoBasicApp.cpp
samples/PangoBasic/vc2015/: PangoBasic.sln  PangoBasic.vcxproj  PangoBasic.vcxproj.filters
samples/PangoBasic/xcode/PangoBasic.xcodeproj/: project.pbxproj
samples/PangoBasicNoCinder/: PangoBasicNoCinder.sln  readme.md
samples/PangoBasicNoCinder/PangoBasicNoCinder.xcodeproj/: project.pbxproj
samples/PangoBasicNoCinder/Xcode/PangoBasicNoCinder.xcodeproj/: project.pbxproj
samples/PangoBasicNoCinder/Xcode/PangoBasicNoCinder.xcodeproj/xcshareddata/xcschemes/: PangoBasicNoCinder.xcscheme
samples/PangoBasicNoCinder/src/: main.cpp
samples/PangoBasicNoCinder/vc2015/: PangoBasicNoCinder.vcxproj
src/: CairoContext.cpp  CairoContext.h  CairoSurface.cpp  CairoSurface.h  CinderPango.cpp  CinderPango.h  FontDescription.cpp  FontDescription.h  Layout.cpp  Layout.h  Pango.cpp  Pango.h
